--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "17.0.2",
+    "react-ellipsis-text": "^1.2.1",
     "sass": "^1.32.8"
   },
   "devDependencies": {
