--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
+    "filepond": "^4.27.0",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.6",
+    "firebase": "^8.4.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "17.0.2",
     "react-ellipsis-text": "^1.2.1",
+    "react-filepond": "^7.1.1",
     "sass": "^1.32.8"
   },
   "devDependencies": {
